# nodetag

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  iam-policy.json  iam-role.json  pod-identity-trust.json  pyproject.toml
charts/nodetag/: Chart.yaml  values.yaml
charts/nodetag/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  nodeAnnotatorClusterRole.yaml  nodeAnnotatorClusterRoleBinding.yaml  podReaderClusterRoleBinding.yaml  podReaderRole.yaml  podReaderRoleBinding.yaml  serviceaccount.yaml
src/nodetag/: operator.py
